# uDOS

./: .copilotignore  .dockerignore  .editorconfig  .env.example  .env.managed.example  .gitconfig-nopager  .gitignore  .gitignore.old  .gitleaks.toml  .gitmodules  .prettierrc  .secure-config-panel-manifest.json  AGENTS.md  ALPHA_RELEASE_PREP.md  ALPINE-MIGRATION-COMPLETE.md  ALPINE-MIGRATION-STATUS.md  APPLIED_FIXES.md  ARCHITECTURE-CALL-GRAPH.md  ASSETS-GUIDE.md  Acorn_TeletextSystemUG.md  BASELINE-v1.0.26.md  BOUNDARY-AUDIT-REPORT.md  CHANGELOG-v1.4.md  CHANGELOG.md  CHANGELOG_v1.0.32.md  CLEANUP-COMPLETE.md  CLEANUP-SUMMARY-v1.2.21.md  CLEANUP.md  CODE-OF-CONDUCT.md  CODE_OF_CONDUCT.md  COMMAND-DEDUP-ANALYSIS.md  CONFIG-PANEL-READY.md  CONTRACT-SYNC-REPORT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CREDITS.md  CROSS-PLATFORM-LAUNCHERS.md  Codex.code-workspace  DATASET_IMPLEMENTATION_COMPLETE.md  DEBUG_ERROR_500.md  (+169 more)
.archive/: FORM_FIELDS_ENHANCEMENT.md  PROVISION-v1.3.4.md
.claude/: settings.local.json
.codex/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: COMMIT-TEMPLATE-PHASE-1.txt  GITHUB_SETUP.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  gemini-instructions.md  lean-commit-guide.md
.vibe/: CONTEXT.md  config.toml
Ai/: ChatGPT-Master OS Vision.md  ChatGPT-Otter Assistant Ready.md  ChatGPT-uOS Check Setup Script.md  ChatGPT-uOS Docker.md
app/: App.code-workspace  README.md  version.json
backup/: backup-index.json  backup-metadata.json  migration-20250822-231756.json
core/: .env  dist  (+39 more)
uNETWORK/display/tauri-template/: Cargo.toml  main.rs  package.json  tauri.conf.json
uNETWORK/display/udos-desktop/src-tauri/: Cargo.toml  tauri.conf.json
uNETWORK/display/udos-desktop/src-tauri/src/: lib.rs  main.rs
(+6522 files in other folders)
